custom.css
/* ... */
/* Homepage social links */
.homepage-social {
  max-width: 500px;
  margin: 100px 0;
  display: flex;
  flex-direction: column;
  gap: 30px;

  @media screen and (max-width: 1240px) {
    margin: 60px 0;
  }
}

.homepage-social .title {
  max-width: 360px;
}

.homepage-social .description {
  font-size: 16px;
  margin-bottom: 10px;
}

/* Social links */
.social-icons-wrapper {
  display: flex;
  gap: 8px;
  margin: 0;
}

.social-icon {
  list-style: none;
  width: 42px;
  transition: opacity 0.3s;

  @media screen and (max-width: 768px) {
    width: 32px;
  }
}

.social-icon:hover {
  opacity: 0.8;
}

/* Find us */
.find-us-list {
  background-color: #171717;
}

.find-us-wrapper {
  display: flex;
  max-width: 100vw;

  @media screen and (max-width: 1240px) {
    flex-direction: column;
  }
}

.find-us-main-image {
  width: 50%;
  object-fit: cover;

  @media screen and (max-width: 1240px) {
    width: 100%;
  }
}

.find-us-info {
  display: flex;
  border-bottom: 1px solid #171717;

  @media screen and (max-width: 768px) {
    flex-direction: column;
  }
}

.find-us-list {
  list-style: none;
  font-size: 12px;
  margin: 0;
  margin-left: 24px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.find-us-list-item {
  display: flex;
  gap: 8px;
  color: rgba(255, 255, 255, 0.815);
}

.find-us-list-item p {
  margin: 0;
  margin-bottom: 2px;
}

.find-us-list-item a {
  color: inherit;
  text-decoration: none;
}

.find-us-list-item a:hover {
  color: white;
  text-decoration: underline;
}

.find-us-list-icon {
  width: 16px;
  display: block;
  margin-top: 4px;
  margin-right: 5px;
}

.find-us-info-wrapper {
  width: 100%;
  background-color: #171717;
  color: white;

  @media screen and (max-width: 1240px) {
    width: 100%;
  }
}

.find-us-title {
  font-size: 18px;
  font-weight: 500;
  line-height: 1.3;
  margin-left: 50px;
  margin-top: 36px;
  margin-bottom: 18px;
  margin-right: 8px;

  @media screen and (max-width: 768px) {
    margin-top: 0;
  }
}

.find-us-phone-list {
  list-style: none;
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.find-us-infobox {
  min-width: 340px;
  width: 50%;
  padding-right: 12px;
  flex: 1;

  @media screen and (max-width: 768px) {
    padding: 40px;
    padding-left: 20px;
  }
}

.find-us-map {
  width: 50%;
  height: 100%;
}

.find-us-map img {
  width: 100%;
  height: 100%;
  min-height: 320px;
  object-fit: cover;
  display: block;
}

/* Header */
.site-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
  z-index: 110;
  padding-top: 50px;
  padding-bottom: 100px;

  @media screen and (max-width: 768px) {
    padding-top: 30px;
    padding-bottom: 60px;
  }
}

.header-logo-link {
  display: block;
}

.header-logo {
  width: 205px;
  display: block;

  @media screen and (max-width: 1240px) {
    width: 150px;
  }
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 16px;
  width: 100%;
  color: white;
  font-size: 20px;
}

.navigation {
  @media screen and (max-width: 1240px) {
    transform: translateX(100%);
    background: rgba(255, 255, 255, 0.92);
    color: #171717;
    position: fixed;
    right: 0;
    top: 0;
    height: 100%;
    padding: 80px;
    padding-top: 160px;
    text-align: right;
    transition: transform 0.3s;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
  }

  @media screen and (max-width: 768px) {
    background: rgba(255, 255, 255, 0.98);
    width: 100%;
    text-align: center;
    padding: 140px 20px;
  }
}

.navigation::after {
  @media screen and (max-width: 1240px) {
    content: "";
    border: 2px solid #171717;
    inset: 20px;
    position: absolute;
    z-index: -1;
  }
}

.navigation.is-active {
  transform: translateX(0%);
}

.header ul {
  margin: 0;
  display: flex;
  gap: 40px;

  @media screen and (max-width: 1240px) {
    display: flex;
    flex-direction: column;
    gap: 20px;
  }
}

.mobile-nav-logo {
  @media screen and (max-width: 1240px) {
    opacity: 0;
    transform: translateY(20px);
    transition: all 0.4s;
    display: block;
    width: 200px;
    transition-delay: 0.6s;
  }
}

.mobile-nav-addition {
  display: none;

  @media screen and (max-width: 1240px) {
    padding-top: 50px;
    display: block;
  }
}

.navigation .social-icons-wrapper {
  display: flex;
  gap: 8px;
  justify-content: center;
  flex-direction: row;
  margin-top: 16px;
  opacity: 0;
  transform: translateY(20px);
  transition: all 0.4s;
  transition-delay: 0.7s;
}

.navigation.is-active .social-icons-wrapper {
  opacity: 1;
  transform: translateY(0);
}

.navigation.is-active .mobile-nav-logo {
  @media screen and (max-width: 1240px) {
    opacity: 1;
    transform: translateY(0);
  }
}

.navigation li {
  list-style: none;
  position: relative;

  @media screen and (max-width: 1240px) {
    opacity: 0;
    transform: translateY(20px);
    transition: all 0.4s;
  }
}

.navigation li:after {
  content: "";
  position: absolute;
  top: 100%;
  width: 100%;
  height: 1px;
  background-color: #fff;
  opacity: 0;
  left: 0;
  transition: 0.3s;

  @media screen and (max-width: 1240px) {
    display: none;
  }
}

.navigation li:hover::after {
  opacity: 1;
}

/* Stagger effect on smaller screens */
@media screen and (max-width: 1240px) {
  .navigation li:nth-child(1) {
    transition-delay: 0s;
  }

  .navigation li:nth-child(2) {
    transition-delay: 0.1s;
  }

  .navigation li:nth-child(3) {
    transition-delay: 0.2s;
  }

  .navigation li:nth-child(4) {
    transition-delay: 0.3s;
  }

  .navigation li:nth-child(5) {
    transition-delay: 0.4s;
  }

  .navigation li:nth-child(6) {
    transition-delay: 0.5s;
  }
}

.navigation.is-active li {
  @media screen and (max-width: 1240px) {
    opacity: 1;
    transform: translateY(0);
  }
}
/* ... */

